# CSE-120-workshop

./: .dockerignore  Dockerfile  README.md  gitignore.htm  pull_request_template.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: release.yml  test.yml
app/: main.py
cse_120_workshop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_home_page.py
